--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <!-- 浏览器标签上显示的网站标题 -->
     <title>月色真美,风也温柔</title>
     <!-- 网站介绍 -->
-    <meta name="description" content="KZHomePage是一款二次元卡片式个人网站主页模板">
+    <meta name="description" content="这是jyj的个人主页">
     <!-- 网站关键字 -->
-    <meta name="keywords" content="风也温柔,个人主页,程序员">
+    <meta name="keywords" content="风也温柔,个人主页">
     <!-- 浏览器标签上显示的图标 -->
     <link rel="icon" type="image/ico" href="//sdn.geekzu.org/avatar/4cc893d113dd74ceca73f9863f2c5446/">
     <!-- 样式文件 -->
@@ -22,12 +22,12 @@
     <style>
         body {
             /*背景图片URL 可使用随机图片API */
-            background-image: url("./static/images/bg.jpeg");
+            background-image: url("./static/images/Screenshot_20240728_030455_com.ss.android.ugc.aweme_edit_70316225349165.jpeg");
         }
 
         .photo-bg {
             /* 卡片左侧图片 */
-            background-image: url("./static/images/fbg.jpg");
+            background-image: url("./static/images/Camera_XHS_17212787576201040g2sg315bt9pgn14dg5onug9n3osqkoucu5so.jpg");
         }
 
         .kz-video {
@@ -66,21 +66,21 @@
                 <h1>KZHomePage</h1>
                 <!-- 标题下的一段话 -->
                 <p>
-                    很荣幸您能访问我的网站！ 目前我仍在学习中，每天抽出时间来看书学习，励志成为一个技术很牛的程序员。
+                    很荣幸您能访问我的网站！ 这是一个个人展示页面。
                 </p>
                 <p id="hitokoto_text">:D 一言获取中...</p>
                 <div class="container-fluid">
                     <div class="row">
                         <!-- 导航按钮组 -->
-                        <button data-href="//www.kezez.com" data-title="Blog" data-window="pop" data-anim="4"
+                        <button data-href="//www.77swlpy.com" data-title="Blog" data-window="pop" data-anim="4"
                             data-area-w="80%" data-area-h="90%" data-shade="false"
                             class="kz-nav-btn btn btn-primary col-lg-4">Blog</button>
 
-                        <button data-href="https://github.com/kaygb/KZHomePage" data-title="GitHub" data-window="newtab"
+                        <button data-href="https://github.com/77swlpy/77swlpy.github.io" data-title="GitHub" data-window="newtab"
                             data-anim="4" data-area-w="80%" data-area-h="90%" data-shade="false"
                             class="kz-nav-btn btn btn-secondary col-lg-4">GitHub</button>
 
-                        <button data-href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=hi@kezez.com"
+                        <button data-href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=hi@77swlpy.com"
                             data-title="Blog" data-window="pop" data-anim="4" data-area-w="80%" data-area-h="90%"
                             data-shade="false" class="kz-nav-btn btn btn-success col-lg-4">Send a Mail</button>
 
@@ -93,7 +93,7 @@
                 <ul class="social mt-1">
                     <li><a href="https://weibo.com/u/5223004318"><i class="fab fa-weibo " aria-hidden="true"></i></a>
                     </li>
-                    <li><a href="https://github.com/kaygb"><i class="fab fa-github" aria-hidden="true"></i></a></li>
+                    <li><a href="https://github.com/77swlpy"><i class="fab fa-github" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fab fa-telegram" aria-hidden="true"></i></a></li>
                     <li><a href="#"><i class="fab fa-twitter" aria-hidden="true"></i></a></li>
                     <li><a href="https://www.zhihu.com/people/kaygb/"><i class="fab fa-zhihu"
@@ -102,11 +102,11 @@
 
                 <footer>
                     <p>Copyright 2018 - Now <a href="https://www.170601.xyz/" target="_blank">七六零一</a>
-                        <a href="http://beian.miit.gov.cn/" target="_blank">豫ICP备00000000号-1</a>
+                        <a href="http://beian.miit.gov.cn/" target="_blank">辽ICP备00000000号-1</a>
                         <br>
-                        <a href="https://github.com/kaygb/KZHomePage" target="_blank" rel="">KZHomePage</a>
+                        <a href="https://github.com/77swlpy/77swlpyHomePage" target="_blank" rel="">77swlpyHomePage</a>
                         Mod by
-                        <a href="https://github.com/kaygb" target="_blank" rel="">kaygb</a>
+                        <a href="https://github.com/77swlpy" target="_blank" rel="">77swlpy</a>
                         <br>
                         <a href="https://console.upyun.com/register/?invite=r1FdZxBoH" target="_blank"
                             rel="nofollow"><img src="https://bu.dusays.com/2021/12/15/9991d2344d2ca.png"
