--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </ul>
 
                 <footer>
-                    <p>Copyright 2018 - Now <a href="https://www.77swlpy/" target="_blank">七六零一</a>
+                    <p>Copyright 2018 - Now <a href="https://www.77swlpy/77swlpy.github.io" target="_blank">七六零一</a>
                         <a href="http://beian.miit.gov.cn/" target="_blank">辽ICP备00000000号-1</a>
                         <br>
                         <a href="https://github.com/77swlpy/77swlpyHomePage" target="_blank" rel="">77swlpyHomePage</a>
