--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <style>
         body {
             /*背景图片URL 可使用随机图片API */
-            background-image: url("./static/images/Screenshot_20240728_030455_com.ss.android.ugc.aweme_edit_70316225349165.jpeg");
+            background-image: url("./static/images/Screenshot_20240728_030455_com.ss.android.ugc.aweme_edit_70316225349165.jpg");
         }
 
         .photo-bg {
