--- a/index.html
+++ b/index.html
@@ -63,12 +63,13 @@
             <div class="col-lg-4 photo-bg"></div>
             <div class="col-lg-8 card">
                 <!-- 大标题 -->
-                <h1>KZHomePage</h1>
+                <h1>77swlpyHomePage</h1>
                 <!-- 标题下的一段话 -->
                 <p>
                     很荣幸您能访问我的网站！ 这是一个个人展示页面。
+                    (●'◡'●)
                 </p>
-                <p id="hitokoto_text">:D 一言获取中...</p>
+                <p id="hitokoto_text">:D 这是一个自我介绍</p>
                 <div class="container-fluid">
                     <div class="row">
                         <!-- 导航按钮组 -->
@@ -101,16 +102,10 @@
                 </ul>
 
                 <footer>
-                    <p>Copyright 2018 - Now <a href="https://www.77swlpy/77swlpy.github.io" target="_blank">七六零一</a>
-                        <a href="http://beian.miit.gov.cn/" target="_blank">辽ICP备00000000号-1</a>
-                        <br>
-                        <a href="https://github.com/77swlpy/77swlpyHomePage" target="_blank" rel="">77swlpyHomePage</a>
-                        Mod by
-                        <a href="https://github.com/77swlpy" target="_blank" rel="">77swlpy</a>
-                        <br>
-                        <a href="https://console.upyun.com/register/?invite=r1FdZxBoH" target="_blank"
-                            rel="nofollow"><img src="https://bu.dusays.com/2021/12/15/9991d2344d2ca.png"
-                                style="width:50px;"></a>
+                    <p>一个什么都喜欢一点的人 热爱运动
+                        游戏打的很菜 玩乙游 很宅 
+                        时e时i
+                        喜欢羽毛球（最近）
                     </p>
                 </footer>
             </div>
