--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
     <!-- 自定义设置 -->
     <style>
-        body {
+         Screenshot_20240728_030455_com.ss.android.ugc.aweme_edit_70316225349165{
             /*背景图片URL 可使用随机图片API */
             background-image: url("./static/images/Screenshot_20240728_030455_com.ss.android.ugc.aweme_edit_70316225349165.jpg");
         }
 
-        .photo-bg {
+        .photo-Camera_XHS_17212787576201040g2sg315bt9pgn14dg5onug9n3osqkoucu5so {
             /* 卡片左侧图片 */
             background-image: url("./static/images/Camera_XHS_17212787576201040g2sg315bt9pgn14dg5onug9n3osqkoucu5so.jpg");
         }
@@ -102,11 +102,11 @@
                 </ul>
 
                 <footer>
-                    <p>一个什么都喜欢一点的人 热爱运动
-                        游戏打的很菜 玩乙游 很宅 
-                        时e时i
-                        喜欢羽毛球（最近）
-                    </p>
+                    <p>一个什么都喜欢一点的人 热爱运动</p>    
+                    <p>游戏打的很菜 玩乙游 很宅</p>
+                    <p>时e时i</p>
+                    <p>喜欢羽毛球（最近）</p>
+                  
                 </footer>
             </div>
         </div>
