--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             background-image: url("./static/images/Screenshot_20240728_030455_com.ss.android.ugc.aweme_edit_70316225349165.jpg");
         }
 
-        .photo-Camera_XHS_17212787576201040g2sg315bt9pgn14dg5onug9n3osqkoucu5so {
+        .bg{
             /* 卡片左侧图片 */
-            background-image: url("./static/images/Camera_XHS_17212787576201040g2sg315bt9pgn14dg5onug9n3osqkoucu5so.jpg");
+            background-image: url("./static/images/bg.jpeg");
         }
 
         .kz-video {
