--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
     <!-- 自定义设置 -->
     <style>
-         Screenshot_20240728_030455_com.ss.android.ugc.aweme_edit_70316225349165{
+         body{
             /*背景图片URL 可使用随机图片API */
             background-image: url("./static/images/Screenshot_20240728_030455_com.ss.android.ugc.aweme_edit_70316225349165.jpg");
         }
 
-        .bg{
+     .photo-bg{
             /* 卡片左侧图片 */
             background-image: url("./static/images/bg.jpeg");
         }
