--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <style>
          body{
             /*背景图片URL 可使用随机图片API */
-            background-image: url("./static/images/file:///C:/Windows/Temp/ca3a3e8a-45f3-47a7-878f-1e0466ed9bf3_77swlpy.github.io-main%20(5).zip.bf3/77swlpy.github.io-main/static/images/Camera_XHS_17212787576201040g2sg315bt9pgn14dg5onug9n3osqkoucu5so.jpg");
+            background-image: url("./static/images/Camera_XHS_17212787576201040g2sg315bt9pgn14dg5onug9n3osqkoucu5so.jpg");
         }
 
      .photo-bg{
