--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
      .photo-bg{
             /* 卡片左侧图片 */
-            background-image: url("static/images/file:///C:/Windows/Temp/ca3a3e8a-45f3-47a7-878f-1e0466ed9bf3_77swlpy.github.io-main%20(5).zip.bf3/77swlpy.github.io-main/static/images/Camera_XHS_17212787576201040g2sg315bt9pgn14dg5onug9n3osqkoucu5so.jpg");
+            background-image: url("/file:///C:/Windows/Temp/ca3a3e8a-45f3-47a7-878f-1e0466ed9bf3_77swlpy.github.io-main%20(5).zip.bf3/77swlpy.github.io-main/static/images/Camera_XHS_17212787576201040g2sg315bt9pgn14dg5onug9n3osqkoucu5so.jpg");
         }
 
         .kz-video {
