--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- 浏览器标签上显示的网站标题 -->
-    <title>月色真美,风也温柔</title>
+    <title>春望山楹，石暖苔生</title>
     <!-- 网站介绍 -->
     <meta name="description" content="这是jyj的个人主页">
     <!-- 网站关键字 -->
-    <meta name="keywords" content="风也温柔,个人主页">
+    <meta name="keywords" content="春望山楹，石暖苔生">
     <!-- 浏览器标签上显示的图标 -->
     <link rel="icon" type="image/ico" href="//sdn.geekzu.org/avatar/4cc893d113dd74ceca73f9863f2c5446/">
     <!-- 样式文件 -->
@@ -66,9 +66,9 @@
                 <h1>77swlpyHomePage</h1>
                 <!-- 标题下的一段话 -->
                 <p>
-                    很荣幸您能访问我的网站！ 这是一个个人展示页面。
-                    (●'◡'●)
-                </p>
+                    很荣幸您能访问我的网站！ 这是一个个人展示页面。 </p>
+                <p>    (●'◡'●)</p>
+               
                 <p id="hitokoto_text">:D 这是一个自我介绍</p>
                 <div class="container-fluid">
                     <div class="row">
