--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                         <!-- 导航按钮组 -->
                         <button data-href="//www.77swlpy.com" data-title="Blog" data-window="pop" data-anim="4"
                             data-area-w="80%" data-area-h="90%" data-shade="false"
-                            class="kz-nav-btn btn btn-primary col-lg-4">Blog</button>
+                            class="kz-nav-btn btn btn-info col-lg-4">Blog</button>
 
                         <button data-href="https://github.com/77swlpy/77swlpy.github.io" data-title="GitHub" data-window="newtab"
                             data-anim="4" data-area-w="80%" data-area-h="90%" data-shade="false"
-                            class="kz-nav-btn btn btn-secondary col-lg-4">GitHub</button>
+                            class="kz-nav-btn btn btn-link col-lg-4">GitHub</button>
 
                         <button data-href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=hi@77swlpy.com"
                             data-title="Blog" data-window="pop" data-anim="4" data-area-w="80%" data-area-h="90%"
