--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
                             data-area-w="80%" data-area-h="90%" data-shade="false"
                             class="kz-nav-btn btn btn-info col-lg-4">Blog</button>
 
-                        <button data-href="https://github.com/77swlpy/77swlpy.github.io" data-title="GitHub" data-window="newtab"
+                        <button data-href="https://github.com/77swlpy" data-title="GitHub" data-window="newtab"
                             data-anim="4" data-area-w="80%" data-area-h="90%" data-shade="false"
                             class="kz-nav-btn btn btn-link col-lg-4">GitHub</button>
 
-                        <button data-href="https://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=hi@77swlpy.com"
+                        <button data-href="https://mail.qq.com/cgi-bin/frame_html?sid=Z7IyeBNV2DPAkRt8&r=cadc96eb97e122a4ea673f104c53ba42&lang=zh"
                             data-title="Blog" data-window="pop" data-anim="4" data-area-w="80%" data-area-h="90%"
-                            data-shade="false" class="kz-nav-btn btn btn-success col-lg-4">Send a Mail</button>
+                            data-shade="false" class="kz-nav-btn btn btn-info col-lg-4">Send a Mail</button>
 
                         <!-- end 导航按钮组 -->
                     </div>
