--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="col-lg-4 photo-bg"></div>
             <div class="col-lg-8 card">
                 <!-- 大标题 -->
-                <h1>77swlpyHomePage</h1>
+                <h1>77swlpy的个人主页</h1>
                 <!-- 标题下的一段话 -->
                 <p>
                     很荣幸您能访问我的网站！ 这是一个个人展示页面。 </p>
